deploy: c25e5c9d41c0e093dcb9ff0925123ca7f26fb107

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Çağatay Özcan Jagiello Gutt</title>
-    <link rel="stylesheet" href="https://cgutt-hub.github.io/cagatay/style.css">
-    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="https://cgutt-hub.github.io/cagatay/blog/atom.xml">
+    <link rel="stylesheet" href="https://cgutt-hub.github.io/5ha99y/style.css">
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="https://cgutt-hub.github.io/5ha99y/blog/atom.xml">
 </head>
 <body>
     <header>
         <div class="header-content">
             <div class="header-left">
-                <h1><a href="https://cgutt-hub.github.io/cagatay">Çağatay Özcan Jagiello Gutt</a></h1>
+                <h1><a href="https://cgutt-hub.github.io/5ha99y">Çağatay Özcan Jagiello Gutt</a></h1>
                 <nav>
-                    <a href="https://cgutt-hub.github.io/cagatay">home</a>
-                    <a href="https://cgutt-hub.github.io/cagatay/cv">cv</a>
-                    <a href="https://cgutt-hub.github.io/cagatay/publications">publications</a>
-                    <a href="https://cgutt-hub.github.io/cagatay/projects">projects</a>
-                    <a href="https://cgutt-hub.github.io/cagatay/blog">blog</a>
-                    <a href="https://cgutt-hub.github.io/cagatay/contact">contact</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y">home</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/cv">cv</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/publications">publications</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/projects">projects</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/blog">blog</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/contact">contact</a>
                 </nav>
             </div>
             <div class="header-right">
@@ -69,7 +69,7 @@
             <a href="https://www.linkedin.com/in/cagatay-gutt" target="_blank">LinkedIn</a>
             <a href="https://orcid.org/0000-0002-1774-532X" target="_blank">ORCID</a>
             <a href="https://github.com/CGutt-hub" target="_blank">GitHub</a>
-            <a href="https://cgutt-hub.github.io/cagatay/blog/atom.xml" target="_blank">RSS</a>
+            <a href="https://cgutt-hub.github.io/5ha99y/blog/atom.xml" target="_blank">RSS</a>
         </div>
         <p>&copy; 2026 Çağatay Özcan Jagiello Gutt</p>
     </footer>
