deploy: ae2d2864c9b8994e84bb6e3ce06cd4da22863794

--- a/de/index.html
+++ b/de/index.html
@@ -11,21 +11,21 @@
     <header>
         <div class="header-content">
             <div class="header-left">
-                <h1><a href="https://cgutt-hub.github.io/5ha99y">Çağatay Özcan Jagiello Gutt</a></h1>
+                <h1><a href="https://cgutt-hub.github.io/5ha99y/de/">Çağatay Özcan Jagiello Gutt</a></h1>
                 <nav>
                     
-                    <a href="https://cgutt-hub.github.io/5ha99y">home</a>
-                    <a href="https://cgutt-hub.github.io/5ha99y/cv">cv</a>
-                    <a href="https://cgutt-hub.github.io/5ha99y/publications">publications</a>
-                    <a href="https://cgutt-hub.github.io/5ha99y/projects">projects</a>
-                    <a href="https://cgutt-hub.github.io/5ha99y/blog">blog</a>
-                    <a href="https://cgutt-hub.github.io/5ha99y/contact">contact</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/">startseite</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/cv">lebenslauf</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/publications">publikationen</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/projects">projekte</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/blog">blog</a>
+                    <a href="https://cgutt-hub.github.io/5ha99y/de/contact">kontakt</a>
                     
                 </nav>
             </div>
             <div class="header-right">
                 <button id="lang-toggle" class="lang-switch" aria-label="Toggle language">
-                    <span class="lang-icon">DE</span>
+                    <span class="lang-icon">EN</span>
                 </button>
                 <button id="theme-toggle" class="theme-switch" aria-label="Toggle theme">
                     <span class="theme-icon">☀️</span>
@@ -45,23 +45,23 @@
 <span class="giallo-l"><span>5ha99y@research-station in ~/about</span></span>
 <span class="giallo-l"><span>❯ cat 5ha99y.txt</span></span>
 <span class="giallo-l"><span>Çağatay Özcan Jagiello Gutt</span></span>
-<span class="giallo-l"><span>Cognitive Science Student (M.Sc.) &amp; Molecular Biologist (B.Sc.)</span></span>
-<span class="giallo-l"><span>Research Assistant @ IfADo - Leibniz-Institut für Arbeitsforschung an der TU Dortmund</span></span></code></pre><h2 id="research-philosophy">Research Philosophy</h2>
-<p>My research is driven by a fascination with <strong>consciousness</strong>—both biological and artificial—and a firm commitment to <strong>open and transparent science</strong>. I believe the most profound advancements in AI, Brain-Computer Interfaces (BCI), and Human-Machine Interaction (HMI) will emerge from a collaborative approach that deeply integrates principles from <strong>embodied cognition</strong>.</p>
-<p>My academic journey from <strong>Molecular Biology</strong> to <strong>Cognitive Science</strong> has given me a multi-scale perspective to tackle these challenges. I use <strong>physiological computing</strong> (EEG, fNIRS, etc.) and open-source Python toolboxes as my primary methods to explore the dynamics of conscious experience.</p>
-<p>For me, developing responsible technology is not just a technical challenge, but an <strong>ethical imperative</strong>. An embodied, physiological perspective is crucial for creating systems that are not only effective but also transparent, fair, and respectful of human autonomy.</p>
-<h2 id="research-focus">Research Focus</h2>
-<p><strong>Artificial Consciousness</strong> — Computational and biological foundations<br />
-<strong>Brain-Computer Interfaces</strong> — Neural signal processing and interaction<br />
-<strong>Human-Machine Interaction</strong> — Intuitive, adaptive interfaces<br />
-<strong>Physiological Computing</strong> — Biological signals for adaptive systems<br />
-<strong>Embodied Cognition</strong> — Body-environment integration</p>
+<span class="giallo-l"><span>Kognitionswissenschaft-Student (M.Sc.) &amp; Molekularbiologe (B.Sc.)</span></span>
+<span class="giallo-l"><span>Wissenschaftlicher Mitarbeiter @ IfADo - Leibniz-Institut für Arbeitsforschung an der TU Dortmund</span></span></code></pre><h2 id="forschungsphilosophie">Forschungsphilosophie</h2>
+<p>Meine Forschung wird von einer Faszination für <strong>Bewusstsein</strong> – sowohl biologisches als auch künstliches – und einem festen Bekenntnis zur <strong>offenen und transparenten Wissenschaft</strong> angetrieben. Ich glaube, dass die tiefgreifendsten Fortschritte in KI, Brain-Computer-Interfaces (BCI) und Mensch-Maschine-Interaktion (HMI) aus einem kollaborativen Ansatz entstehen werden, der Prinzipien der <strong>verkörperten Kognition</strong> tief integriert.</p>
+<p>Mein akademischer Weg von der <strong>Molekularbiologie</strong> zur <strong>Kognitionswissenschaft</strong> hat mir eine multiskalare Perspektive gegeben, um diese Herausforderungen anzugehen. Ich nutze <strong>physiologisches Computing</strong> (EEG, fNIRS, etc.) und Open-Source Python-Toolboxen als meine primären Methoden, um die Dynamik bewusster Erfahrung zu erforschen.</p>
+<p>Für mich ist die Entwicklung verantwortungsvoller Technologie nicht nur eine technische Herausforderung, sondern ein <strong>ethisches Gebot</strong>. Eine verkörperte, physiologische Perspektive ist entscheidend für die Schaffung von Systemen, die nicht nur effektiv, sondern auch transparent, fair und respektvoll gegenüber menschlicher Autonomie sind.</p>
+<h2 id="forschungsschwerpunkte">Forschungsschwerpunkte</h2>
+<p><strong>Künstliches Bewusstsein</strong> — Computationale und biologische Grundlagen<br />
+<strong>Brain-Computer-Interfaces</strong> — Neuronale Signalverarbeitung und Interaktion<br />
+<strong>Mensch-Maschine-Interaktion</strong> — Intuitive, adaptive Schnittstellen<br />
+<strong>Physiologisches Computing</strong> — Biologische Signale für adaptive Systeme<br />
+<strong>Verkörperte Kognition</strong> — Körper-Umwelt-Integration</p>
 <hr />
-<h2 id="community-engagement">Community &amp; Engagement</h2>
+<h2 id="gemeinschaft-engagement">Gemeinschaft &amp; Engagement</h2>
 <h3 id="volt-europa">Volt Europa</h3>
-<p>Active member working toward progressive, evidence-based policy and European cooperation. I focus on <strong>data analytics</strong> and <strong>digital policy</strong>, advocating for open and transparent governance, evidence-based decision-making, and the responsible use of technology in public institutions.</p>
+<p>Aktives Mitglied für progressive, evidenzbasierte Politik und europäische Zusammenarbeit. Ich konzentriere mich auf <strong>Datenanalyse</strong> und <strong>Digitalpolitik</strong> und setze mich für offene und transparente Governance, evidenzbasierte Entscheidungsfindung und den verantwortungsvollen Einsatz von Technologie in öffentlichen Institutionen ein.</p>
 <h3 id="chaos-computer-club-ccc">Chaos Computer Club (CCC)</h3>
-<p>Participant in Europe's largest hacker association, advocating for digital rights, privacy, and technological transparency. The CCC's commitment to open knowledge and ethical technology aligns deeply with my scientific and political values.</p>
+<p>Teilnehmer an Europas größter Hackervereinigung, die sich für digitale Rechte, Datenschutz und technologische Transparenz einsetzt. Das Engagement des CCC für offenes Wissen und ethische Technologie stimmt tief mit meinen wissenschaftlichen und politischen Werten überein.</p>
 
     </div>
 </article>
