--- a/de/index.html
+++ b/de/index.html
@@ -44,15 +44,15 @@
         
 <article>
     <div class="content">
-        <pre class="giallo" style="color: #CDD6F4; background-color: #1E1E2E;"><code data-lang="plain"><span class="giallo-l"><span>5ha99y@research-station in ~</span></span>
+        <pre class="giallo" style="color: #CDD6F4; background-color: #1E1E2E;"><code data-lang="plain"><span class="giallo-l"><span>5ha99y@lab in ~</span></span>
 <span class="giallo-l"><span>❯ whoami</span></span>
 <span class="giallo-l"><span>5ha99y</span></span>
 <span class="giallo-l"></span>
-<span class="giallo-l"><span>5ha99y@research-station in ~/about</span></span>
+<span class="giallo-l"><span>5ha99y@lab in ~/about</span></span>
 <span class="giallo-l"><span>❯ cat 5ha99y.txt</span></span>
 <span class="giallo-l"><span>Çağatay Özcan Jagiello Gutt</span></span>
-<span class="giallo-l"><span>Kognitionswissenschaft-Student (M.Sc.) &amp; Molekularbiologe (B.Sc.)</span></span>
-<span class="giallo-l"><span>Wissenschaftlicher Mitarbeiter @ IfADo - Leibniz-Institut für Arbeitsforschung an der TU Dortmund</span></span></code></pre><h2 id="forschungsphilosophie">Forschungsphilosophie</h2>
+<span class="giallo-l"><span>Kognitionswissenschaften-Student (M.Sc.) &amp; Molekularbiologe (B.Sc.)</span></span>
+<span class="giallo-l"><span>Wissenschaftliche Hilfskraft @ IfADo - Leibniz-Institut für Arbeitsforschung an der TU Dortmund</span></span></code></pre><h2 id="forschungsphilosophie">Forschungsphilosophie</h2>
 <p>Meine Forschung wird von einer Faszination für <strong>Bewusstsein</strong> – sowohl biologisches als auch künstliches – und einem festen Bekenntnis zur <strong>offenen und transparenten Wissenschaft</strong> angetrieben. Ich glaube, dass die tiefgreifendsten Fortschritte in KI, Brain-Computer-Interfaces (BCI) und Mensch-Maschine-Interaktion (HMI) aus einem kollaborativen Ansatz entstehen werden, der Prinzipien der <strong>verkörperten Kognition</strong> tief integriert.</p>
 <p>Mein akademischer Weg von der <strong>Molekularbiologie</strong> zur <strong>Kognitionswissenschaft</strong> hat mir eine multiskalare Perspektive gegeben, um diese Herausforderungen anzugehen. Ich nutze <strong>physiologisches Computing</strong> (EEG, fNIRS, etc.) und Open-Source Python-Toolboxen als meine primären Methoden, um die Dynamik bewusster Erfahrung zu erforschen.</p>
 <p>Für mich ist die Entwicklung verantwortungsvoller Technologie nicht nur eine technische Herausforderung, sondern ein <strong>ethisches Gebot</strong>. Eine verkörperte, physiologische Perspektive ist entscheidend für die Schaffung von Systemen, die nicht nur effektiv, sondern auch transparent, fair und respektvoll gegenüber menschlicher Autonomie sind.</p>
