deploy: 503fa4666d06015e0131c4ce72eee94196066828

--- a/de/tools/index.html
+++ b/de/tools/index.html
@@ -44,34 +44,47 @@
     <main>
         
 <article>
-    <h1>Kontakt</h1>
+    <h1>Werkzeuge</h1>
     <div class="content">
-        <h2 id="kontakt-aufnehmen">Kontakt aufnehmen</h2>
-<p>Haben Sie eine Frage oder möchten Sie zusammenarbeiten? Senden Sie mir eine Nachricht über das folgende Formular:</p>
-<form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-<input type="hidden" name="access_key" value="2cb0577f-8acd-46d2-a940-3d47ff9a507d">
-<input type="hidden" name="redirect" value="https://cgutt-hub.github.io/5ha99y/de/contact">
-<div class="form-group">
-<label for="name">Name *</label>
-<input type="text" id="name" name="name" required>
-</div>
-<div class="form-group">
-<label for="email">E-Mail *</label>
-<input type="email" id="email" name="email" required>
-</div>
-<div class="form-group">
-<label for="subject">Betreff *</label>
-<input type="text" id="subject" name="subject" required>
-</div>
-<div class="form-group">
-<label for="message">Nachricht *</label>
-<textarea id="message" name="message" rows="6" required></textarea>
-</div>
-<div class="form-group">
-<input type="checkbox" name="botcheck" class="hidden" aria-hidden="true" tabindex="-1">
-</div>
-<p><button type="submit" class="submit-btn">Nachricht senden</button></p>
-</form>
+        <h2 id="forschungswerkzeuge">Forschungswerkzeuge</h2>
+<p>Ich entwickle und pflege Open-Source-Werkzeuge zur Unterstützung akademischer Forschung und Informationsentdeckung. Diese Werkzeuge sind darauf ausgelegt, die Literatursuche und -verwaltung effizienter und intelligenter zu gestalten.</p>
+<hr />
+<h3 id="mag-academic-paper-finder">🔍 Academic Paper Finder</h3>
+<p>Ein intelligentes Werkzeug zur Entdeckung wissenschaftlicher Arbeiten, angetrieben durch KI und mehrere Datenquellen. Perfekt für Forscher, die kontinuierliche Überwachung neuer Publikationen in ihrem Fachgebiet benötigen.</p>
+<p><strong>Hauptfunktionen:</strong></p>
+<ul>
+<li>Multi-Quellen-Suche (arXiv, PubMed, Semantic Scholar, OpenAlex)</li>
+<li>KI-gestützte Relevanzanalyse und Zusammenfassung</li>
+<li>Direkte Zotero-Integration für Bibliotheksverwaltung</li>
+<li>Automatisierte kontinuierliche Suche und Überwachung</li>
+<li>Konfigurierbare Suchparameter und Filter</li>
+</ul>
+<p><strong>Anwendungsfall:</strong> Lokal herunterladen und ausführen für kontinuierliche Paper-Überwachung, automatische Speicherung und Bibliotheksintegration.</p>
+<p><strong>Repository:</strong> <a rel="external" href="https://github.com/CGutt-hub/paper-finder">github.com/CGutt-hub/paper-finder</a></p>
+<p><strong>Download:</strong> Verfügbar als Python-Paket - siehe Repository für Installationsanweisungen.</p>
+<hr />
+<h3 id="rocket-eigene-suchmaschine-searxng">🚀 Eigene Suchmaschine (SearXNG)</h3>
+<p>Eine datenschutzorientierte, selbst-gehostete Suchmaschine, optimiert für akademische Forschung. Basiert auf SearXNG mit angepasster Konfiguration für wissenschaftliche Datenbanken.</p>
+<p><strong>Hauptfunktionen:</strong></p>
+<ul>
+<li>Multi-Quellen-Suche (arXiv, PubMed, Google Scholar, Semantic Scholar, CrossRef und 20+ mehr)</li>
+<li>Datenschutz zuerst: kein Tracking, keine Protokollierung, keine Werbung</li>
+<li>Angepasstes Theme im 5ha99y Design</li>
+<li>Such-Shortcuts für schnellen Zugriff auf bestimmte Datenbanken</li>
+<li>Dockerisiert für einfache Bereitstellung</li>
+</ul>
+<p><strong>Anwendungsfall:</strong> Ihre eigene persönliche Suchmaschine, die Sie kontrollieren. In der Cloud bereitstellen (kostenlose Optionen verfügbar) oder lokal im Netzwerk betreiben. Perfekt für Forscher, die Privatsphäre + umfassende akademische Suche wollen.</p>
+<p><strong>Bereitstellung:</strong> Selbst-gehostet (erfordert Docker)</p>
+<ul>
+<li><strong>Schnellstart:</strong> Siehe <a rel="external" href="https://github.com/CGutt-hub/searxng5ha99y#quick-start">Deployment-Anleitung</a></li>
+<li><strong>Kostenlose Hosting-Optionen:</strong> Oracle Cloud, Google Cloud, Fly.io</li>
+<li><strong>Lokaler Cluster:</strong> Später auf eigene Hardware migrieren</li>
+</ul>
+<p><strong>Repository:</strong> <a rel="external" href="https://github.com/CGutt-hub/searxng5ha99y">github.com/CGutt-hub/searxng5ha99y</a></p>
+<hr />
+<h2 id="support-mitwirkung">Support &amp; Mitwirkung</h2>
+<p>Alle Werkzeuge sind Open-Source und freuen sich über Beiträge. Wenn Sie auf Probleme stoßen oder Feature-Anfragen haben, öffnen Sie bitte ein Issue im jeweiligen GitHub-Repository.</p>
+<p>Für Fragen oder Kooperationsanfragen können Sie mich gerne <a href="/contact">kontaktieren</a>.</p>
 
     </div>
 </article>
