--- a/static/header.html
+++ b/static/header.html
@@ -7,7 +7,12 @@
                 <a href="https://cgutt-hub.github.io/5ha99y/cv/">cv</a>
                 <a href="https://cgutt-hub.github.io/5ha99y/publications/">publications</a>
                 <a href="https://cgutt-hub.github.io/5ha99y/projects/">projects</a>
-                <a href="https://cgutt-hub.github.io/5ha99y/tools/">tools</a>
+                <div class="nav-dropdown">
+                    <a href="#" class="dropdown-trigger">tools ▾</a>
+                    <div class="dropdown-menu">
+                        <a href="https://cgutt-hub.github.io/paperFinder/">Paper Finder</a>
+                    </div>
+                </div>
                 <a href="https://cgutt-hub.github.io/5ha99y/blog/">blog</a>
                 <a href="https://cgutt-hub.github.io/5ha99y/contact/">contact</a>
             </nav>
