feat: integrate Paper Finder web interface into main site

--- a/static/header.html
+++ b/static/header.html
@@ -10,7 +10,7 @@
                 <div class="nav-dropdown">
                     <a href="#" class="dropdown-trigger">tools ▾</a>
                     <div class="dropdown-menu">
-                        <a href="https://cgutt-hub.github.io/paperFinder/">Paper Finder</a>
+                        <a href="https://cgutt-hub.github.io/5ha99y/paper-finder/">Paper Finder</a>
                     </div>
                 </div>
                 <a href="https://cgutt-hub.github.io/5ha99y/blog/">blog</a>
