--- a/static/paper-finder/index.html
+++ b/static/paper-finder/index.html
@@ -388,65 +388,15 @@
     <main>
         <div class="content">
 
-            <h2>About Paper Finder</h2>
-            <p>
-                Paper Finder is an AI-powered academic paper search tool that helps you discover, download, and organize scientific literature from multiple sources, including Semantic Scholar and arXiv. It supports advanced search queries, citation export, and batch downloads for efficient research workflows.
-            </p>
-            <ul>
-                <li><strong>Features:</strong>
-                    <ul>
-                        <li>Search across multiple academic databases</li>
-                        <li>Download papers in PDF format</li>
-                        <li>Export citations to Zotero, BibTeX, and JSON</li>
-                        <li>Batch search and download for large queries</li>
-                        <li>Open access and privacy-respecting</li>
-                    </ul>
-                </li>
-                <li><strong>How it works:</strong>
-                    <ul>
-                        <li>Enter your search query and select sources</li>
-                        <li>Paper Finder uses academic APIs to find relevant papers</li>
-                        <li>Results are shown with download and export options</li>
-                    </ul>
-                </li>
-                <li><strong>Saving results:</strong>
-                    <ul>
-                        <li>Downloaded papers are saved to your chosen folder</li>
-                        <li>Citations are exported as .bib, .json, or directly to Zotero</li>
-                        <li>Search history and results can be exported for later use</li>
-                    </ul>
-                </li>
-            </ul>
-
             <h1>Paper Finder</h1>
-            <p>Search academic papers with AI-powered semantic ranking. Filter by year, citations, fields of study. Export directly to Zotero.</p>
+            <p>AI-powered academic paper search with semantic ranking, filtering, and citation export.</p>
 
-            <!-- Settings -->
-            <h2>Settings</h2>
-            <div class="card">
-                <blockquote>API keys are stored only in your browser. They are never sent anywhere except the respective API endpoints.</blockquote>
-
-                <h3>OpenAI (optional)</h3>
-                <p>Enables AI-powered ranking and query expansion.</p>
-                <div class="form-group">
-                    <label for="openai-key">API Key</label>
-                    <input type="password" id="openai-key" placeholder="sk-...">
-                </div>
-
-                <h3>Zotero (optional)</h3>
-                <p>Enables direct export to your library.</p>
-                <div class="form-group">
-                    <label for="zotero-key">API Key</label>
-                    <input type="password" id="zotero-key" placeholder="Zotero API key">
-                </div>
-                <div class="form-group">
-                    <label for="zotero-user">User ID</label>
-                    <input type="text" id="zotero-user" placeholder="Numeric user ID">
-                </div>
-
-                <div id="settings-status"></div>
-                <button id="settings-save" type="button">Save Settings</button>
-            </div>
+            <blockquote>
+                <strong>Note:</strong> This is a <strong>testing interface</strong> for one-time searches. 
+                For continuous monitoring and batch downloads, install the 
+                <a href="https://github.com/CGutt-hub/paperFinder" target="_blank" rel="noopener">Python CLI tool</a> 
+                with scheduled GitHub Actions or local automation.
+            </blockquote>
 
             <!-- Search -->
             <div class="card">
