deploy: 8ec78c0bb0fe684e2c6b6657835dbf83ea23f62f

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
         <p><em>Active development projects tracked via <a rel="external" href="https://github.com/CGutt-hub">GitHub</a>. My open backoffice for collaborative science.</em></p>
 <hr />
 <h3 id="5ha99y">5ha99y</h3>
-<p><strong>Language:</strong> Python<br />
+<p><strong>Language:</strong> JavaScript<br />
 <strong>Last updated:</strong> 2026-02-18</p>
 <details>
 <summary>View README</summary>
@@ -200,12 +200,10 @@
 <h1 id="paper-finder-microscope-books">Paper Finder 🔬📚</h1>
 <p><strong>AI-Powered Academic Paper Search Tool with Zotero Integration</strong></p>
 <p>Find exactly the papers you need using semantic search, multi-dimensional filtering, and push them directly to your Zotero library.</p>
-<p><strong>Live Demo</strong>: <a rel="external" href="https://cgutt-hub.github.io/paperFinder">cgutt-hub.github.io/paperFinder</a></p>
-<h2 id="two-ways-to-use">Two Ways to Use</h2>
-<ol>
-<li><strong>Web Version</strong> (recommended) - No installation needed, runs in your browser</li>
-<li><strong>CLI Version</strong> - Python command-line tool for power users</li>
-</ol>
+<p><strong>Web Version</strong>: <a rel="external" href="https://cgutt-hub.github.io/5ha99y/paper-finder/">cgutt-hub.github.io/5ha99y/paper-finder/</a></p>
+<h2 id="about">About</h2>
+<p>Paper Finder is available as a <strong>Python CLI tool</strong> for power users who want to integrate academic paper search into their workflows.</p>
+<p>The <strong>web interface</strong> is hosted as part of the main 5ha99y site and provides a user-friendly way to search papers without any installation.</p>
 <h2 id="features">Features</h2>
 <ul>
 <li><strong>🔍 Multi-Source Search</strong>: Search Semantic Scholar and arXiv simultaneously</li>
