deploy: 14c079bc4b0a6d5eed6bf87ec959048d1fb86f04

--- a/paper-finder/index.html
+++ b/paper-finder/index.html
@@ -392,24 +392,13 @@
             <h1>Paper Finder</h1>
             <p>AI-powered academic paper search with semantic ranking, filtering, and citation export.</p>
 
-            <div class="card" style="background: var(--bg-secondary); border-left: 3px solid var(--accent-primary);">
-                <h2 style="font-size: var(--font-size-lg); margin-bottom: 0.75rem;">Why Paper Finder?</h2>
-                <p style="margin-bottom: 0.75rem;">
-                    Academic research moves fast. Keeping up with new papers across multiple sources while filtering for 
-                    quality and relevance is time-consuming. Paper Finder combines arXiv and Semantic Scholar searches 
-                    with OpenAI-powered semantic ranking to surface the most relevant papers for your research interests.
-                </p>
-                <p style="margin-bottom: 0.75rem;">
-                    Instead of manually checking multiple platforms and sifting through hundreds of results, you get 
-                    <strong>intelligent filtering</strong> based on your actual query meaning, not just keywords. 
-                    Papers are ranked by semantic similarity, citation metrics, and recency—saving hours of literature review time.
-                </p>
-                <p style="margin-bottom: 0;">
-                    Export directly to Zotero, download BibTeX citations, or save as JSON for further analysis. 
-                    Whether you're a researcher staying current with your field or exploring new areas, Paper Finder 
-                    streamlines the discovery process so you can focus on what matters: reading and understanding the research.
-                </p>
-            </div>
+            <h2>Why Paper Finder?</h2>
+
+            <p>Academic research moves fast. Keeping up with new papers across multiple sources while filtering for quality and relevance is time-consuming. Paper Finder combines arXiv and Semantic Scholar searches with OpenAI-powered semantic ranking to surface the most relevant papers for your research interests.</p>
+
+            <p>Instead of manually checking multiple platforms and sifting through hundreds of results, you get <strong>intelligent filtering</strong> based on your actual query meaning, not just keywords. Papers are ranked by semantic similarity, citation metrics, and recency—saving hours of literature review time.</p>
+
+            <p>Export directly to Zotero, download BibTeX citations, or save as JSON for further analysis. Whether you're a researcher staying current with your field or exploring new areas, Paper Finder streamlines the discovery process so you can focus on what matters: reading and understanding the research.</p>
 
             <blockquote>
                 <strong>Note:</strong> This is a <strong>testing interface</strong> for one-time searches. 
